debugged the contact me button in the hi there section, debugged the navbar overlapping the hi there text when reduced to certain media query dimensions. this was achieved by adding margin to the top of the header named display-4

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="jumbotron jumboBackground">
       <div class="jumboCopy">
         <h1 class="display-4">Hi There, <br>I'm Shahid // Dev-Shai</h1>
-        <p class="lead">Welcome to my page and portfolio. I am a web developer with a range of experience which both directly and indirectly fuels my passion for coding and UX and psychology.</p>
+        <p class="lead">Welcome to my page and portfolio. I am a web developer with a range of experience that, both directly and indirectly, fuels my passion for coding, UX and psychology.</p>
 
         <!-- image -->
         <div>
@@ -75,15 +75,18 @@
     <!-- Cards -->
     <a id="aboutme"></a>
     <br>
-    <div class="container-fluid content">
+    <div class="jumbotron2">
+      <div class="jumbocopy2">
+  
+      <div class="container-fluid content">
       <h2 class="sectionHeading">About me</h2>
-      <p>I have skills in front-end development as well as experience and notable training in the field Psychology. My interest in understanding others informs my commitment to learning more around UX, web development, and considering how to create a product that best and - hopefully exceeds - users' hopes.</p>
+      <p class="sectioncontent">I have skills in front-end development as well as experience and notable training in the field Psychology. My interest in understanding others informs my commitment to learning more around UX, web development, and considering how to create a product that best meets (and hopefully exceeds) users' hopes.</p>  
       <div class="row showsNear">
 
         <!-- Card 1 -->
-        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="cardContainer col-lg-12 col-md-12 col-sm-12">
           <div class="card">
-            <img src="images/show1.jpg" class="card-img-top" alt="...">
+            <img src="./images/website-placeholder.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Melbourne, Australia</h5>
               <p class="card-text">Come see Slipknot unlease their new album "We Are Not Your Kind"</p>
@@ -94,9 +97,9 @@
         <!-- End card 1 -->
 
         <!-- Card 2 -->
-        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
           <div class="card">
-            <img src="images/show2.jpg" class="card-img-top" alt="...">
+            <img src="./images/2ndwebsite-placeholder.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Chicago, Illinois</h5>
               <p class="card-text">Metallica finally returns to the big stage in Chicago Illinois</p>
@@ -107,9 +110,9 @@
         <!-- End card 2 -->
 
         <!-- Card 3 -->
-        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
           <div class="card">
-            <img src="images/show3.jpg" class="card-img-top" alt="...">
+            <img src="./images/game-placeholder.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Long Beach, California</h5>
               <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
@@ -117,9 +120,61 @@
             </div>
           </div>
         </div>
-        <!-- End card 3 -->
+
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+          <div class="card">
+            <img src="./images/game-placeholder.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Long Beach, California</h5>
+              <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+          <div class="card">
+            <img src="./images/game-placeholder.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Long Beach, California</h5>
+              <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+          <div class="card">
+            <img src="./images/game-placeholder.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Long Beach, California</h5>
+              <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+          <div class="card">
+            <img src="./images/game-placeholder.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Long Beach, California</h5>
+              <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
+            </div>
+          </div>
+        </div>
+        <!-- End cards -->
+        </div>
       </div>
-    </div>
+    </div>   
+  </div>   
+</div>
+            <!-- End card 3 -->
+          <!-- </div>
+        </div>
+      </div>
+    </div> -->
     <!-- End cards -->
 
     <!-- Content -->
