updated incorrect text on html which formerly replaced Lorem text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   
       <div class="container-fluid content">
       <h2 class="sectionHeading">My Skills</h2>
-      <p class="sectioncontent">I have skills in front-end development as well as experience and notable training in the field Psychology. My interest in understanding others informs my commitment to learning more around UX, web development, and considering how to create a product that best meets (and hopefully exceeds) users' hopes.</p>  
+      <p class="sectioncontent">I have skills in front-end development as well as experience and notable training in the field Psychology. My interest in understanding others informs my commitment to learning more around UX, web development, and considering how to create a product that best meets (and hopefully exceeds) users' hopes.<br><br> During my CPD and BootCamp I further expect to learn skills in developing JS driven apps and interfaces, including tools that can improve the daily lives of users.</p>  
       <div>
         <img style="padding: 1rem;" class="skills-image" src="./images/aboutme_image2.png" alt="image a lightbulb within the head of a person">
       </div>
@@ -97,7 +97,7 @@
 
   <div class="container-fluid content">
   <h2 class="sectionHeading">My Projects</h2>
-  <p class="sectioncontent">I have skills in front-end development as well as experience and notable training in the field Psychology. My interest in understanding others informs my commitment to learning more around UX, web development, and considering how to create a product that best meets (and hopefully exceeds) users' hopes. <br><br> During my CPD and BootCamp I further expect to learn skills in developing JS driven apps and interfaces, including tools that can improve the daily lives of users.
+  <p class="sectioncontent">Below are a selection of some of my currently planned projects. 
   </p>  
   <div class="row mycardselection">
 
